# testTask

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/: network_config.hpp
program1/: CMakeLists.txt
program1/include/program1/: application.hpp  shared_buffer.hpp  tcp_client.hpp
program1/src/: application.cpp  main.cpp  shared_buffer.cpp  tcp_client.cpp
program2/: CMakeLists.txt
program2/include/program2/: application.hpp  message_processor.hpp  tcp_server.hpp
program2/src/: application.cpp  main.cpp  message_processor.cpp  tcp_server.cpp
tests/: CMakeLists.txt  application_tests.cpp  processing_tests.cpp  program2_application_tests.cpp  program2_message_tests.cpp  shared_buffer_tests.cpp  tcp_client_tests.cpp  tcp_server_tests.cpp  test_utils.hpp
